adiciona suporte para rolagem no componente App e ajusta o ícone do aplicativo

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "HollowTrip",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/hn.jpeg",
+    "icon": "./assets/icon-hn.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
